# weft

./: .gitignore  README.md  cont  pixi.toml  pyproject.toml
.claude/: CLAUDE.md
docs/: 00-overview.md  01-architecture.md  02-compute-sites.md  03-environments.md  04-data-plane.md  05-agent-interface.md  06-roadmap.md
documentation/: architecture.md  ensure_envelope.schema.json  schemas.md  usage.md
skills/weft/: SKILL.md
src/weft/: api.py  bundle.py  cachedir.py  capability.py  cas.py  classify.py  data.py  envman.py  errors.py  evict.py  gc.py  gpu.py  grade.py  ids.py  kernel.py  lock.py  mcp_server.py  overlay.py  placement.py  policy.py  poller.py  preview.py  probe.py  publish.py  realize.py  retain.py  runner.py  runner_util.py  service.py  session.py  site_tools.py  solvers.py  sources.py  spec.py  store.py  strategy.py  task.py  toolchain.py  verify.py
tests/: conftest.py
tests/bench/: test_bench_local.py
tests/conformance/: test_adapter_conformance.py  test_ensure_chain.py  test_envelope.py  test_vocabulary.py
tests/eval/: scripted_agent.py  test_agent_in_loop.py
tests/integration/: test_agent_cadence.py  test_array_drilldown.py  test_bastion_chain.py  test_block_a.py  test_block_c.py  test_block_d.py  test_bundle.py  test_bundle_envelope.py  test_chaos_ssh.py  test_cloud_mock.py  test_cluster_discovery.py  test_cran_layer.py  test_dependencies.py  test_double_driver.py  test_drift_revise.py  test_env_packages.py  test_eval_adapt_fixes.py  test_eval_findings.py  test_evict.py  test_extends_env.py  test_file_outputs.py  test_forgiving_solve.py  (+62 more)
(+66 files in other folders)
