[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weft"
version = "0.1.0"
description = "Weft — execution substrate for agent-driven analysis (design codename: Fabric)"
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[project.scripts]
weft = "weft.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 600
markers = [
    "docker: needs local docker daemon",
    "solver: needs network access to package indexes",
    "slow: long-running integration test",
]
